<resources>
    <string name="app_name">Studytool</string>
    <string name="Db">https://studytool-304217-default-rtdb.firebaseio.com/Users.json</string>
    <string name="quizzes">Quizzes</string>
    <string name="log_in">Log in</string>
    <string name="confirm">Confirm</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Do not have an account yet ?</string>
    <string name="click_here">Click Here</string>
    <string name="click_here_to_register">Click here to register</string>
    <string name="enter_username">Username</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="email">Someone@stud.hkr.se</string>
    <string name="register">Register</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="passwordRules"><p><b><br> at least 1 digit</br>
        <br>at least 1 lower case letter</br>
        <br>at least 1 upper case letter</br>
       <br> at least 1 special character</br>
        <br>at least 4 characters</br>
        <br>no white spaces</br>
    </b></p>
    </string>
    <string name="page_number">Page Number</string>
    <string name="search">search</string>
    <string name="truth_table">Truth Table</string>
    <string name="submit">Submit</string>
    <string name="output">Output</string>
    <string name="operating_systems">Operating Systems</string>
    <string name="algorithms_and_data_structures">Algorithms and Data Structures</string>
    <string name="courses">Courses</string>
    <string name="data_communication">Data Communication</string>
    <string name="digital_system">Digital System</string>
    <string name="test_your_self_before_exam">Test your self before exam</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="facebook_app_id">181738426848830</string>
    <string name="facebook_login_protocol_scheme">fb181738426848830</string>
    <string name="save">Save</string>
    <string name="delete_all">Delete All</string>
    <string name="welcome">Welcome</string>
    <string-array name="YoutubeVideos">

    </string-array>
    <string-array name="DsVideos">
        <item>https://www.youtube.com/embed/V6mKVRU1evU</item>
        <item>https://www.youtube.com/embed/M4ubFru2O80</item>
        <item>https://www.youtube.com/embed/4VqmGXwpLqc</item>
        <item>https://www.youtube.com/embed/nKzEJWbkPbQ</item>
        <item>https://www.youtube.com/embed/9O7OJi7RCLQ</item>
        <item>https://www.youtube.com/embed/FKvnmxte98A</item>

    </string-array>
    <string-array name="DcVideos">
        <item>https://www.youtube.com/embed/oIRkXulqJA4</item>
        <item>https://www.youtube.com/embed/vv4y_uOneC0</item>
        <item>https://www.youtube.com/embed/1z0ULvg_pW8</item>
        <item>https://www.youtube.com/embed/Mad4kQ5835Y</item>
        <item>https://www.youtube.com/embed/9O7OJi7RCLQ</item>
        <item>https://www.youtube.com/embed/FKvnmxte98A</item>

    </string-array>
    <string-array name="OsVideos">
        <item>https://www.youtube.com/embed/VjPgYcQqqN0</item>
        <item>https://www.youtube.com/embed/YcRd3WMbXnE</item>
        <item>https://www.youtube.com/embed/F18RiREDkwE</item>
        <item>https://www.youtube.com/embed/So9SR3qpWsM</item>
        <item>https://www.youtube.com/embed/9O7OJi7RCLQ</item>
        <item>https://www.youtube.com/embed/FKvnmxte98A</item>

    </string-array>
    <string-array name="DdVideos">
        <item>https://www.youtube.com/embed/Z6Nds10n7rs</item>
        <item>https://www.youtube.com/embed/aLUY-s7LSns</item>
        <item>https://www.youtube.com/embed/RK3P9L2ZXk4</item>
        <item>https://www.youtube.com/embed/NO7Gt8IDSGA</item>
        <item>https://www.youtube.com/embed/9O7OJi7RCLQ</item>
        <item>https://www.youtube.com/embed/FKvnmxte98A</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="buy_sell_materials">Buy/Sell Materials</string>
    <string name="my_notes">My Notes</string>
    <string name="private_chat">Private Chat</string>
    <string name="share">Share</string>
    <string name="share_to_facebook">Share To FaceBook</string>
    <string name="email_support">Email_support</string>
    <string name="project_manager">Project Manager</string>
    <string name="log_out">Log Out</string>
</resources>