<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CourseFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/quiz_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".View.CourseFragment">

     <!--    -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/courses"
            android:textColor="@color/hkrDarkGreen"
            android:textSize="30sp" />

        <Button
            android:id="@+id/moveToDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:onClick="onClickk"
            android:text="@string/algorithms_and_data_structures" />


        <Button
            android:id="@+id/moveToOS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:onClick="onClickk"
            android:text="@string/operating_systems" />

        <Button
            android:id="@+id/moveToDC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:onClick="onClickk"
            android:text="@string/data_communication" />

        <Button
            android:id="@+id/moveToDigital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_button"
            android:onClick="onClickk"
            android:text="@string/digital_system" />


 </LinearLayout>


 </FrameLayout>