<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".login"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/signup_background"
    android:id="@+id/firstLayout">


<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:errorEnabled="true"
    android:id="@+id/username"
    app:counterEnabled="true"
    app:counterMaxLength="15"
    app:counterOverflowTextColor="@color/red"
    app:counterTextColor="@color/hkrGreen"
    >

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_username"
        android:layout_marginBottom="8sp"
        />
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:counterEnabled="true"
        app:counterTextColor="@color/hkrGreen"
        app:counterOverflowTextColor="@color/red"
        app:counterMaxLength="16">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/confirm"
        android:textSize="20sp"
        android:layout_marginTop="30sp"
        />

    <TextView
        android:id="@+id/sign_up_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="forgotPassword"
        android:shadowColor="@color/hkrGreen"
        android:text="Forgot Password "
        android:textColor="@color/hkrDarkGreen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</LinearLayout>